<resources>
    <string name="app_name">BookShelf</string>
    <string name="action_settings">Settings</string>
    <string name="action_title">Title</string>
    <string name="action_isbn">ISBN</string>

    <string name="search_bar_hint">Book name or ISBN</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_shelf">ShelfActivity</string>

    <string name="category">Categories: </string>
    <string name="publish_date">Publish date: </string>
    <string name="publisher">Publisher: </string>
    <string name="isbn">ISBN: </string>
    <string name="description">Description:</string>
    <string name="raters">Raters: </string>
    <string name="rate">Rate: </string>
    <string name="language">Language: </string>
    <string name="pages"> pages</string>

    <string name="book_name_mock">Quilting in Black and White</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>
